--- a/index.html
+++ b/index.html
@@ -1528,6 +1528,12 @@
             height: 100%;
             object-fit: cover;
             transition: transform 0.4s;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            pointer-events: none;
+            -webkit-touch-callout: none;
         }
 
         .team-member-card:hover .team-member-image-wrapper img {
@@ -3163,6 +3169,19 @@
                         </div>
                     </div>
 
+                    <!-- Team Member 16 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/SaiShree_team_16.jpg"
+                                alt="Sai Shree">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Sai Shree</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
                     <!-- Team Member 17 -->
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
@@ -3332,6 +3351,32 @@
                         </div>
                     </div>
 
+                    <!-- Team Member 30 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 200 200'%3E%3Crect fill='%23dfe5e7' width='200' height='200'/%3E%3Cg transform='translate(100 100)'%3E%3Ccircle cx='0' cy='-20' r='35' fill='%239e9e9e'/%3E%3Cpath d='M-45,70 Q-45,30 -30,20 Q0,5 30,20 Q45,30 45,70 Z' fill='%239e9e9e'/%3E%3C/g%3E%3C/svg%3E"
+                                alt="Noor Banu">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Noor Banu</h3>
+                            <p class="team-member-role">Finance Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 31 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 200 200'%3E%3Crect fill='%23dfe5e7' width='200' height='200'/%3E%3Cg transform='translate(100 100)'%3E%3Ccircle cx='0' cy='-20' r='35' fill='%239e9e9e'/%3E%3Cpath d='M-45,70 Q-45,30 -30,20 Q0,5 30,20 Q45,30 45,70 Z' fill='%239e9e9e'/%3E%3C/g%3E%3C/svg%3E"
+                                alt="Sumayya Tahseen">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Sumayya Tahseen</h3>
+                            <p class="team-member-role">Content Writer</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
                     <!-- DUPLICATE CARDS FOR SEAMLESS LOOP -->
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
@@ -3449,6 +3494,258 @@
                         <div class="team-member-info">
                             <h3 class="team-member-name">Manasa</h3>
                             <p class="team-member-role">Publicity Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Divya_team_11.jpeg"
+                                alt="Divya">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Divya</h3>
+                            <p class="team-member-role">Publicity Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Priya_team_12.jpeg"
+                                alt="Priya">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Priya</h3>
+                            <p class="team-member-role">Cultural Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Sathwika_team_13.jpeg"
+                                alt="Sathwika">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Sathwika</h3>
+                            <p class="team-member-role">Hospitality Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Chandana_team_14.jpeg"
+                                alt="Chandana">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Chandana</h3>
+                            <p class="team-member-role">Hospitality Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Radhika_team_15.jpeg"
+                                alt="Radhika">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Radhika</h3>
+                            <p class="team-member-role">Publicity Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/SaiShree_team_16.jpg"
+                                alt="Sai Shree">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Sai Shree</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/varsha_team_17.JPG"
+                                alt="Varsha">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Varsha</h3>
+                            <p class="team-member-role">Publicity Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Aravind_team_18.jpeg"
+                                alt="Aravind">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Aravind</h3>
+                            <p class="team-member-role">Publicity Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/divya_team_19.jpeg"
+                                alt="Divya">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Divya</h3>
+                            <p class="team-member-role">Publicity Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Dharani_team_20.jpg"
+                                alt="Dharani">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Dharani</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Hamikha_team_21.jpg"
+                                alt="Hamikha">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Hamikha</h3>
+                            <p class="team-member-role">Social Media Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/SoukyaSri_team_22.jpg"
+                                alt="Soukya Sri">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Soukya Sri</h3>
+                            <p class="team-member-role">Registration Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Ruhit_team_23.jpeg"
+                                alt="Ruhit">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Ruhit</h3>
+                            <p class="team-member-role">Event Manager</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Jayanth_team_24.jpeg"
+                                alt="Jayanth">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Jayanth</h3>
+                            <p class="team-member-role">Discipline Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Koushik_team_25.jpeg"
+                                alt="Koushik">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Koushik</h3>
+                            <p class="team-member-role">Poster Designing</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Karthik_team_26.jpeg"
+                                alt="Karthik">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Karthik</h3>
+                            <p class="team-member-role">Cultural Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Sricharan_team_27.jpeg"
+                                alt="Sricharan">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Sricharan</h3>
+                            <p class="team-member-role">Hospitality Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/lokesh_team_28.jpeg"
+                                alt="Lokesh">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Lokesh</h3>
+                            <p class="team-member-role">Cultural Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Manikarnika_team_29.jpeg"
+                                alt="Manikarnika">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Manikarnika</h3>
+                            <p class="team-member-role">Poster Designing</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 200 200'%3E%3Crect fill='%23dfe5e7' width='200' height='200'/%3E%3Cg transform='translate(100 100)'%3E%3Ccircle cx='0' cy='-20' r='35' fill='%239e9e9e'/%3E%3Cpath d='M-45,70 Q-45,30 -30,20 Q0,5 30,20 Q45,30 45,70 Z' fill='%239e9e9e'/%3E%3C/g%3E%3C/svg%3E"
+                                alt="Noor Banu">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Noor Banu</h3>
+                            <p class="team-member-role">Finance Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 200 200'%3E%3Crect fill='%23dfe5e7' width='200' height='200'/%3E%3Cg transform='translate(100 100)'%3E%3Ccircle cx='0' cy='-20' r='35' fill='%239e9e9e'/%3E%3Cpath d='M-45,70 Q-45,30 -30,20 Q0,5 30,20 Q45,30 45,70 Z' fill='%239e9e9e'/%3E%3C/g%3E%3C/svg%3E"
+                                alt="Sumayya Tahseen">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Sumayya Tahseen</h3>
+                            <p class="team-member-role">Content Writer</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
                     </div>
