added team members photos

--- a/index.html
+++ b/index.html
@@ -3267,7 +3267,7 @@
                                 alt="Ruhit">
                         </div>
                         <div class="team-member-info">
-                            <h3 class="team-member-name">Ruhit</h3>
+                            <h3 class="team-member-name">Mohammad Ruhith</h3>
                             <p class="team-member-role">Event Manager</p>
                             <p class="team-member-department">CSE Dept</p>
                         </div>
@@ -3352,6 +3352,58 @@
                     </div>
 
                     <!-- Team Member 30 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Mukhesh_team_30.jpeg"
+                                alt="Mukhesh">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Mukhesh</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 31 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Shreya_team_31.jpeg"
+                                alt="Shreya">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Shreya</h3>
+                            <p class="team-member-role">Arts & Craft Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 32 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Ruthika Reddy_team_32.jpeg"
+                                alt="Ruthika Reddy">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Ruthika Reddy</h3>
+                            <p class="team-member-role">Social Media Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 33 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Sreenija_team_33.jpeg"
+                                alt="Sreenija">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Sreenija</h3>
+                            <p class="team-member-role">Social Media Coordinator</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 34 -->
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
                             <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 200 200'%3E%3Crect fill='%23dfe5e7' width='200' height='200'/%3E%3Cg transform='translate(100 100)'%3E%3Ccircle cx='0' cy='-20' r='35' fill='%239e9e9e'/%3E%3Cpath d='M-45,70 Q-45,30 -30,20 Q0,5 30,20 Q45,30 45,70 Z' fill='%239e9e9e'/%3E%3C/g%3E%3C/svg%3E"
